update Create server

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -215,4 +215,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#.env
+*.env
+
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,linux,macos,node
