--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,6 @@
 {
   "name": "api",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^5.3.0",
+    "mongoose": "^6.10.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
