--- a/api/package.json
+++ b/api/package.json
@@ -12,13 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
+    "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
-    "mongodb": "^5.3.0",
     "mongoose": "^6.10.4",
     "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.22"
   }
 }
