--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "alert": "^5.1.4",
     "axios": "^1.3.5",
     "cors": "^2.8.5",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-paypal-button-v2": "^2.6.3",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-vis": "^1.11.12",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
